--- a/panoptic_mapping/CMakeLists.txt
+++ b/panoptic_mapping/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 3.0.2)
 project(panoptic_mapping)
 
 set(CMAKE_CXX_STANDARD 17)
+
+add_compile_options(-fsanitize=address -fno-omit-frame-pointer)
+add_link_options(-fsanitize=address -fno-omit-frame-pointer)
+
 # add_definitions(-Wall)
 find_package(catkin_simple REQUIRED)
 catkin_simple(ALL_DEPS_REQUIRED)
